Fix board cell styling on mobile

--- a/src/components/GameBoard/GameBoard.module.css
+++ b/src/components/GameBoard/GameBoard.module.css
@@ -1,6 +1,6 @@
 .game-board {
   width: 100%;
-  height: 460px;
+  height: auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
