--- a/src/components/GameBoardCell/GameBoardCell.module.css
+++ b/src/components/GameBoardCell/GameBoardCell.module.css
@@ -1,12 +1,15 @@
 .game-board-cell {
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
   background-color: var(--color-semi-dark-navy);
   box-shadow: inset 0px -8px 0px #10212a;
   border-radius: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
+  aspect-ratio: 1 / 1;
 }
 
 .game-board-cell:hover:not(.populated) {
@@ -22,14 +25,16 @@
   background-size: 64px 64px;
 }
 
-.current-player-x:hover:not(.populated) > .mark-icon {
-  background: url('/src/assets/icon-x-outline.svg') no-repeat center;
-}
+@media only screen and (min-width: 768px) {
+  .current-player-x:hover:not(.populated) > .mark-icon {
+    background: url('/src/assets/icon-x-outline.svg') no-repeat center;
+  }
 
-.current-player-o:hover:not(.populated) > .mark-icon {
-  background: url('/src/assets/icon-o-outline.svg') no-repeat center;
-}
+  .current-player-o:hover:not(.populated) > .mark-icon {
+    background: url('/src/assets/icon-o-outline.svg') no-repeat center;
+  }
 
-.populated {
-  cursor: default;
+  .populated {
+    cursor: default;
+  }
 }
